# monoidmap

./: .gitignore  CHANGELOG.md  Data-MonoidMap-Unsafe.html  Data-MonoidMap.html  Data-Total-MonoidMap-Unsafe.html  Data-Total-MonoidMap.html  LICENSE  README.md  build.sh  cabal.project  cabal.project.local  doc-index.html  doc-index.json  haddock.sh  hie.yaml  index.html  meta.json  monoidmap-aeson.cabal  monoidmap-examples.cabal  monoidmap-internal.cabal  monoidmap-quickcheck.cabal  monoidmap.cabal  monoidmap.haddock  test.sh  total-monoidal-maps.cabal  total-monoidal-maps.haddock
.github/workflows/: build.yml
components/monoidmap-aeson-test/Data/MonoidMap/: AccessSpec.hs  ExampleSpec.hs  IntersectionSpec.hs  ValiditySpec.hs
components/monoidmap-aeson-test/Test/: Common.hs  Key.hs
components/monoidmap-aeson/Data/MonoidMap/: JSON.hs
components/monoidmap-benchmark/: Main.hs
components/monoidmap-examples-test/Examples/: MultiMapSpec.hs
components/monoidmap-examples/Data/Set/: NonEmpty.hs
components/monoidmap-examples/Examples/: MultiMap.hs  MultiSet.hs  NestedMonoidMap.hs  RecoveredMap.hs  SeqMap.hs
components/monoidmap-internal/Data/MonoidMap/: Internal.hs  Unsafe.hs
components/monoidmap-test/Data/MonoidMap/: AccessSpec.hs  ClassSpec.hs  ComparisonSpec.hs  ConversionSpec.hs  DistributivitySpec.hs  ExampleSpec.hs  FilterSpec.hs  FoldSpec.hs  IntersectionSpec.hs  JSONSpec.hs  MapSpec.hs  MembershipSpec.hs  PartitionSpec.hs  PrefixSpec.hs  RecoveredMapSpec.hs  SingletonSpec.hs  SliceSpec.hs  SuffixSpec.hs  (+3 more)
components/monoidmap-test/Examples/: MultiMapSpec.hs  RecoveredMapSpec.hs
components/monoidmap-test/Test/: Common.hs  Key.hs
components/monoidmap/Data/: MonoidMap.hs  MonoidMapF.hs
golden/: MonoidMap (Int,Int) (Dual Text).json  MonoidMap (Int,Int) (Dual [Int]).json  MonoidMap (Int,Int) (Dual [Natural]).json  MonoidMap (Int,Int) (MonoidMap (Key 2) (Sum Int)).json  MonoidMap (Int,Int) (MonoidMap (Key 2) (Sum Natural)).json  MonoidMap (Int,Int) (Product Int).json  MonoidMap (Int,Int) (Product Natural).json  MonoidMap (Int,Int) (Set Int).json  MonoidMap (Int,Int) (Set Natural).json  MonoidMap (Int,Int) (Sum Int).json  MonoidMap (Int,Int) (Sum Natural).json  MonoidMap (Int,Int) Text.json  MonoidMap (Int,Int) [Int].json  MonoidMap (Int,Int) [Natural].json  MonoidMap Int (Dual Text).json  MonoidMap Int (Dual [Int]).json  MonoidMap Int (Dual [Natural]).json  MonoidMap Int (MonoidMap (Key 2) (Sum Int)).json  MonoidMap Int (MonoidMap (Key 2) (Sum Natural)).json  MonoidMap Int (Product Int).json  MonoidMap Int (Product Natural).json  MonoidMap Int (Set Int).json  MonoidMap Int (Set Natural).json  MonoidMap Int (Sum Int).json  MonoidMap Int (Sum Natural).json  MonoidMap Int Text.json  MonoidMap Int [Int].json  MonoidMap Int [Natural].json  MonoidMap Text (Dual Text).json  MonoidMap Text (Dual [Int]).json  MonoidMap Text (Dual [Natural]).json  MonoidMap Text (MonoidMap (Key 2) (Sum Int)).json  MonoidMap Text (MonoidMap (Key 2) (Sum Natural)).json  MonoidMap Text (Product Int).json  MonoidMap Text (Product Natural).json  MonoidMap Text (Set Int).json  MonoidMap Text (Set Natural).json  MonoidMap Text (Sum Int).json  MonoidMap Text (Sum Natural).json  MonoidMap Text Text.json  (+16 more)
monoidmap-0.0.4.4-inplace/: Data-MonoidMap.html  doc-index.json  monoidmap.haddock
monoidmap-aeson-0.0.0.5-inplace/: Data-MonoidMap-JSON.html  doc-index.html  index.html  monoidmap-aeson.haddock
monoidmap-aeson-0.0.0.5-inplace/src/: Data.MonoidMap.JSON.html
monoidmap-examples-0.0.0.0-inplace/: Data-MonoidMap-Examples-MultiMap-Class.html  Data-MonoidMap-Examples-MultiMap-Instances-MultiMap1.html  Data-MonoidMap-Examples-MultiMap-Instances-MultiMap2.html  Data-MonoidMap-Examples-MultiMap-Instances-MultiMap3.html  Data-MonoidMap-Examples-MultiMap-Instances-MultiMap4.html  Data-MonoidMap-Examples-MultiMap.html  Data-MonoidMap-Examples-MultiSet.html  Data-MonoidMap-Examples-NestedMonoidMap.html  Data-MonoidMap-Examples-Set-NonEmpty.html  doc-index.html  doc-index.json  index.html  monoidmap-examples.haddock
monoidmap-examples-0.0.0.0-inplace/src/: Data.MonoidMap.Examples.MultiMap.Class.html  Data.MonoidMap.Examples.MultiMap.Instances.MultiMap1.html  Data.MonoidMap.Examples.MultiMap.Instances.MultiMap2.html  Data.MonoidMap.Examples.MultiMap.Instances.MultiMap3.html  Data.MonoidMap.Examples.MultiMap.Instances.MultiMap4.html  Data.MonoidMap.Examples.MultiMap.html  Data.MonoidMap.Examples.MultiSet.html  Data.MonoidMap.Examples.NestedMonoidMap.html  Data.MonoidMap.Examples.Set.NonEmpty.html
monoidmap-internal-0.0.0.0-inplace/: Data-MonoidMap-Internal-RecoveredMap.html  Data-MonoidMap-Internal-Unsafe.html  Data-MonoidMap-Internal.html  doc-index.html  doc-index.json  index.html  monoidmap-internal.haddock
monoidmap-internal-0.0.0.0-inplace/src/: Data.MonoidMap.Internal.RecoveredMap.html  Data.MonoidMap.Internal.Unsafe.html  Data.MonoidMap.Internal.html
monoidmap-quickcheck-0.0.0.2-inplace/: Data-MonoidMap-QuickCheck-Instances-Arbitrary.html  Data-MonoidMap-QuickCheck-Instances-CoArbitrary.html  Data-MonoidMap-QuickCheck-Instances-Function.html  Data-MonoidMap-QuickCheck-Instances.html  README.md  doc-index.html  doc-index.json  index.html  monoidmap-quickcheck.haddock
monoidmap-quickcheck-0.0.0.2-inplace/src/: Data.MonoidMap.QuickCheck.Instances.Arbitrary.html  Data.MonoidMap.QuickCheck.Instances.CoArbitrary.html  Data.MonoidMap.QuickCheck.Instances.Function.html  Data.MonoidMap.QuickCheck.Instances.html
src/: Data.MonoidMap.Internal.html  Data.MonoidMap.Unsafe.html  Data.MonoidMap.html  Data.Total.MonoidMap.Unsafe.html  Data.Total.MonoidMap.html
src/benchmark/: Main.hs
src/examples/Examples/: Index.hs  MultiMap.hs  MultiSet.hs  NestedMonoidMap.hs  RecoveredMap.hs
src/monoidmap-benchmark/: Main.hs
src/monoidmap-test/Data/: MonoidMapSpec.hs  RecoveredMapSpec.hs
src/monoidmap/Data/: MonoidMap.hs
src/public/Data/: MonoidMap.hs
src/test/Data/: MonoidMapSpec.hs  RecoveredMapSpec.hs
src/test/Examples/: IndexSpec.hs  MultiMapSpec.hs  RecoveredMapSpec.hs
src/test/Test/: Common.hs
(+139 files in other folders)
