cabal-version:  3.0
name:           monoidmap-aeson
version:        0.0.0.0
bug-reports:    https://github.com/jonathanknowles/monoidmap-aeson/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2025 Jonathan Knowles
category:       Data Structures
synopsis:       Monoidal map type
description:
    Monoidal map type with support for semigroup and monoid subclasses.

extra-doc-files:
    CHANGELOG.md
    README.md

common dependency-aeson
    build-depends:aeson                         >= 2.2.3.0    && < 2.3
common dependency-base
    build-depends:base                          >= 4.14.3.0   && < 4.22
common dependency-containers
    build-depends:containers                    >= 0.6.5.1    && < 0.8
common dependency-deepseq
    build-depends:deepseq                       >= 1.4.4.0    && < 1.6
common dependency-groups
    build-depends:groups                        >= 0.5.3      && < 0.6
common dependency-hspec
    build-depends:hspec                         >= 2.10.9     && < 2.12
common dependency-hspec-golden-aeson
    build-depends:hspec-golden-aeson            >= 0.9.0.0    && < 0.10
common dependency-monoid-subclasses
    build-depends:monoid-subclasses             >= 1.2.3      && < 1.3
common dependency-nonempty-containers
    build-depends:nonempty-containers           >= 0.3.4.4    && < 0.4
common dependency-nothunks
    build-depends:nothunks                      >= 0.1.3      && < 0.4
common dependency-pretty-show
    build-depends:pretty-show                   >= 1.10       && < 1.11
common dependency-QuickCheck
    build-depends:QuickCheck                    >= 2.14.2     && < 2.16
common dependency-quickcheck-classes
    build-depends:quickcheck-classes            >= 0.6.5.0    && < 0.7
common dependency-quickcheck-groups
    build-depends:quickcheck-groups             >= 0.0.0.0    && < 0.1
common dependency-quickcheck-monoid-subclasses
    build-depends:quickcheck-monoid-subclasses  >= 0.3.0.0    && < 0.4
common dependency-quickcheck-quid
    build-depends:quickcheck-quid               >= 0.0.1.7    && < 0.1
common dependency-tasty-bench
    build-depends:tasty-bench                   >= 0.3.2      && < 0.5
common dependency-tasty-hunit
    build-depends:tasty-hunit                   >= 0.10.0.3   && < 0.11
common dependency-text
    build-depends:text                          >= 1.2.4.1    && < 2.2

common extensions
    default-extensions:
        BangPatterns
        ConstraintKinds
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        NumericUnderscores
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/monoidmap-aeson

library monoidmap
    import:
      , dependency-base
      , dependency-containers
      , dependency-groups
      , dependency-monoid-subclasses
      , extensions
    build-depends:
      , monoidmap-internal
    visibility:
        public
    hs-source-dirs:
        components/monoidmap
    exposed-modules:
        Data.MonoidMap
    default-language:
        Haskell2010

library
    import:
      , dependency-aeson
      , dependency-base
      , dependency-containers
      , dependency-monoid-subclasses
      , extensions
    hs-source-dirs:
        components/monoidmap-aeson
    exposed-modules:
        Data.MonoidMap.JSON
    default-language:
        Haskell2010
    build-depends:
      , monoidmap

benchmark monoidmap-benchmark
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-tasty-bench
      , dependency-tasty-hunit
      , extensions
    build-depends:
      , monoidmap
      , monoidmap-examples
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        components/monoidmap-benchmark
    main-is:
        Main.hs

library monoidmap-examples
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-monoid-subclasses
      , dependency-nonempty-containers
      , extensions
    build-depends:
      , monoidmap
    visibility:
        private
    hs-source-dirs:
        components/monoidmap-examples
    exposed-modules:
        Examples.MultiMap
        Examples.MultiMap.Class
        Examples.MultiMap.Instances.MultiMap1
        Examples.MultiMap.Instances.MultiMap2
        Examples.MultiMap.Instances.MultiMap3
        Examples.MultiMap.Instances.MultiMap4
        Examples.MultiSet
        Examples.NestedMonoidMap
        Examples.RecoveredMap
    default-language:
        Haskell2010

library monoidmap-internal
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-groups
      , dependency-monoid-subclasses
      , dependency-nothunks
      , extensions
    visibility:
        private
    hs-source-dirs:
        components/monoidmap-internal
    exposed-modules:
        Data.MonoidMap.Internal
        Data.MonoidMap.Unsafe
    default-language:
        Haskell2010

test-suite monoidmap-test
    import:
      , dependency-aeson
      , dependency-base
      , dependency-containers
      , dependency-groups
      , dependency-hspec
      , dependency-hspec-golden-aeson
      , dependency-monoid-subclasses
      , dependency-pretty-show
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-quickcheck-groups
      , dependency-quickcheck-monoid-subclasses
      , dependency-quickcheck-quid
      , dependency-text
      , extensions
    build-depends:
      , monoidmap
      , monoidmap-aeson
      , monoidmap-examples
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        components/monoidmap-test
    other-modules:
        SpecHook
        Data.MonoidMap.ClassSpec
        Data.MonoidMap.ExampleSpec
        Data.MonoidMap.AccessSpec
        Data.MonoidMap.ComparisonSpec
        Data.MonoidMap.ConversionSpec
        Data.MonoidMap.DistributivitySpec
        Data.MonoidMap.JSONSpec
        Data.MonoidMap.MapSpec
        Data.MonoidMap.FilterSpec
        Data.MonoidMap.FoldSpec
        Data.MonoidMap.PartitionSpec
        Data.MonoidMap.MembershipSpec
        Data.MonoidMap.SingletonSpec
        Data.MonoidMap.SliceSpec
        Data.MonoidMap.TraversalSpec
        Data.MonoidMap.PrefixSpec
        Data.MonoidMap.SuffixSpec
        Data.MonoidMap.IntersectionSpec
        Data.MonoidMap.UnionSpec
        Data.MonoidMap.ValiditySpec
        Examples.MultiMapSpec
        Examples.RecoveredMapSpec
        Test.Combinators.NonZero
        Test.Common
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
        Test.Key
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
