cabal-version:  3.0
name:           monoidmap-aeson
version:        0.0.0.4
bug-reports:    https://github.com/jonathanknowles/monoidmap-aeson/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2025 Jonathan Knowles
category:       Data Structures
synopsis:       JSON support for monoidmap.
description:    JSON support for the monoidmap package, compatible with aeson.

extra-doc-files:
    CHANGELOG.md
    README.md

extra-source-files:
    golden/*.json

common dependency-aeson
    build-depends:aeson                         >= 2.2.3.0    && < 2.3
common dependency-base
    build-depends:base                          >= 4.14.3.0   && < 4.22
common dependency-containers
    build-depends:containers                    >= 0.6.5.1    && < 0.8
common dependency-hspec
    build-depends:hspec                         >= 2.10.9     && < 2.12
common dependency-hspec-golden-aeson
    build-depends:hspec-golden-aeson            >= 0.9.0.0    && < 0.10
common dependency-monoid-subclasses
    build-depends:monoid-subclasses             >= 1.2.3      && < 1.3
common dependency-monoidmap
    build-depends:monoidmap                     >= 0.0.3.0    && < 0.1
common dependency-QuickCheck
    build-depends:QuickCheck                    >= 2.14.2     && < 2.16
common dependency-quickcheck-classes
    build-depends:quickcheck-classes            >= 0.6.5.0    && < 0.7
common dependency-quickcheck-quid
    build-depends:quickcheck-quid               >= 0.0.1.7    && < 0.1
common dependency-text
    build-depends:text                          >= 1.2.4.1    && < 2.2

common extensions
    default-extensions:
        BangPatterns
        ConstraintKinds
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        NumericUnderscores
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/monoidmap-aeson

library
    import:
      , dependency-aeson
      , dependency-base
      , dependency-containers
      , dependency-monoid-subclasses
      , dependency-monoidmap
      , extensions
    hs-source-dirs:
        components/monoidmap-aeson
    exposed-modules:
        Data.MonoidMap.JSON
    default-language:
        Haskell2010

test-suite monoidmap-aeson-test
    import:
      , dependency-aeson
      , dependency-base
      , dependency-containers
      , dependency-hspec
      , dependency-hspec-golden-aeson
      , dependency-monoid-subclasses
      , dependency-monoidmap
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-quickcheck-quid
      , dependency-text
      , extensions
    build-depends:
      , monoidmap-aeson
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        components/monoidmap-aeson-test
    other-modules:
        SpecHook
        Data.MonoidMap.JSONSpec
        Test.Common
        Test.QuickCheck.Classes.Hspec
        Test.Key
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
