cabal-version:  3.0
name:           monoidmap-examples
version:        0.0.0.0
bug-reports:    https://github.com/jonathanknowles/monoidmap-examples/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2025 Jonathan Knowles
category:       Data Structures
synopsis:       Examples for monoidmap.
description:    Examples for the monoidmap package.

extra-doc-files:
    CHANGELOG.md
    README.md

common dependency-base
    build-depends:base                          >= 4.14.3.0   && < 4.22
common dependency-containers
    build-depends:containers                    >= 0.6.5.1    && < 0.8
common dependency-deepseq
    build-depends:deepseq                       >= 1.4.4.0    && < 1.6
common dependency-groups
    build-depends:groups                        >= 0.5.3      && < 0.6
common dependency-hspec
    build-depends:hspec                         >= 2.10.9     && < 2.12
common dependency-monoid-subclasses
    build-depends:monoid-subclasses             >= 1.2.3      && < 1.3
common dependency-monoidmap
    build-depends:monoidmap                     >= 0.0.4.3    && < 0.1
common dependency-nothunks
    build-depends:nothunks                      >= 0.1.3      && < 0.4
common dependency-pretty-show
    build-depends:pretty-show                   >= 1.10       && < 1.11
common dependency-QuickCheck
    build-depends:QuickCheck                    >= 2.14.2     && < 2.16
common dependency-quickcheck-classes
    build-depends:quickcheck-classes            >= 0.6.5.0    && < 0.7
common dependency-quickcheck-groups
    build-depends:quickcheck-groups             >= 0.0.0.0    && < 0.1
common dependency-quickcheck-monoid-subclasses
    build-depends:quickcheck-monoid-subclasses  >= 0.3.0.0    && < 0.4
common dependency-quickcheck-quid
    build-depends:quickcheck-quid               >= 0.0.1.7    && < 0.1
common dependency-text
    build-depends:text                          >= 1.2.4.1    && < 2.2

common extensions
    default-extensions:
        BangPatterns
        ConstraintKinds
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        NumericUnderscores
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/monoidmap

library
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-groups
      , dependency-monoid-subclasses
      , dependency-monoidmap
      , dependency-nothunks
      , extensions
    hs-source-dirs:
        components/monoidmap-examples
    exposed-modules:
        Data.MonoidMap.Internal.Examples.MultiMap
        Data.MonoidMap.Internal.Examples.MultiMap.Class
        Data.MonoidMap.Internal.Examples.MultiMap.Instances.MultiMap1
        Data.MonoidMap.Internal.Examples.MultiMap.Instances.MultiMap2
        Data.MonoidMap.Internal.Examples.MultiMap.Instances.MultiMap3
        Data.MonoidMap.Internal.Examples.MultiMap.Instances.MultiMap4
        Data.MonoidMap.Internal.Examples.MultiSet
        Data.MonoidMap.Internal.Examples.NestedMonoidMap
        Data.MonoidMap.Internal.Examples.Set.NonEmpty
    default-language:
        Haskell2010

test-suite monoidmap-test
    import:
      , dependency-base
      , dependency-containers
      , dependency-groups
      , dependency-hspec
      , dependency-monoid-subclasses
      , dependency-monoidmap
      , dependency-pretty-show
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-quickcheck-groups
      , dependency-quickcheck-monoid-subclasses
      , dependency-quickcheck-quid
      , dependency-text
      , extensions
    build-depends:
      , monoidmap-examples
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        components/monoidmap-test
    other-modules:
        SpecHook
        Examples.MultiMapSpec
        Test.Common
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
        Test.Key
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
