cabal-version:  3.0
name:           monoidmap
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/monoidmap/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       Total monoidal map type
description:
    Total monoidal map type with support for semigroup and monoid subclasses.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/monoidmap

library
    import:
        common-extensions
    hs-source-dirs:
        src/monoidmap
    exposed-modules:
        Data.MonoidMap
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , monoidmap-internal

library monoidmap-examples
    import:
        common-extensions
    hs-source-dirs:
        src/monoidmap-examples
    exposed-modules:
        Data.MonoidMap.Examples.NestedMonoidMap
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , deepseq
      , monoid-subclasses
      , monoidmap
      , strict-containers

library monoidmap-internal
    import:
        common-extensions
    hs-source-dirs:
        src/monoidmap-internal
    exposed-modules:
        Data.MonoidMap.Internal
        Data.MonoidMap.Internal.RecoveredMap
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , deepseq
      , groups
      , monoid-subclasses
      , strict-containers

test-suite monoidmap-test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/monoidmap-test
    other-modules:
        Data.MonoidMapSpec
        Data.RecoveredMapSpec
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        base >=4.7 && <5
      , QuickCheck
      , groups
      , hspec
      , monoid-subclasses
      , monoidmap
      , monoidmap-internal
      , pretty-show
      , quickcheck-classes
      , quickcheck-classes-groups
      , quickcheck-classes-monoid-subclasses
      , quickcheck-instances
      , strict-containers

benchmark monoidmap-benchmark
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/monoidmap-benchmark
    main-is:
        Main.hs
    ghc-options:
        -O2
    build-depends:
        base >=4.7 && <5
      , deepseq
      , monoidmap-internal
      , strict-containers
      , tasty-bench
      , tasty-hunit
