cabal-version:  3.0
name:           monoidmap
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/monoidmap/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       Total monoidal map type
description:
    Total monoidal map type with support for semigroup and monoid subclasses.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns
    ghc-options:
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

source-repository head
    type: git
    location: https://github.com/jonathanknowles/monoidmap

library
    import:
        common-extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Data.MonoidMap
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , monoidmap:internal

library examples
    import:
        common-extensions
    hs-source-dirs:
        src/examples
    exposed-modules:
        Data.MonoidMap.Examples.NestedMonoidMap
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , deepseq
      , monoid-subclasses
      , monoidmap

library internal
    import:
        common-extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Data.MonoidMap.Internal
        Data.MonoidMap.Internal.RecoveredMap
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , deepseq
      , groups
      , monoid-subclasses

test-suite test
    import:
        common-extensions
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        SpecHook
        Data.MonoidMapSpec
        Data.RecoveredMapSpec
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , base >=4.7 && <5
      , containers
      , groups
      , hspec >= 2.8.3
      , monoid-subclasses
      , monoidmap
      , monoidmap:internal
      , pretty-show
      , QuickCheck
      , quickcheck-classes
      , quickcheck-groups
      , quickcheck-instances
      , quickcheck-monoid-subclasses
      , text

benchmark benchmark
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    build-depends:
      , base >=4.7 && <5
      , containers
      , deepseq
      , monoidmap:internal
      , tasty-bench
      , tasty-hunit
