cabal-version:  3.0
name:           monoidmap
version:        0.0.5.0
bug-reports:    https://github.com/jonathanknowles/monoidmap/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2026 Jonathan Knowles
category:       Data Structures
synopsis:       Monoidal map type
description:
    Monoidal map type with support for semigroup and monoid subclasses.

extra-doc-files:
    CHANGELOG.md
    README.md

common dependency-base
    build-depends:base                          >= 4.14.3.0   && < 4.22
common dependency-containers
    build-depends:containers                    >= 0.6.5.1    && < 0.8
common dependency-deepseq
    build-depends:deepseq                       >= 1.4.4.0    && < 1.6
common dependency-groups
    build-depends:groups                        >= 0.5.3      && < 0.6
common dependency-monoid-subclasses
    build-depends:monoid-subclasses             >= 1.2.3      && < 1.3
common dependency-monoidmap-internal
    build-depends:monoidmap-internal            >= 0.1.0.0    && < 0.2
common dependency-nothunks
    build-depends:nothunks                      >= 0.1.3      && < 0.4

common extensions
    default-extensions:
        BangPatterns
        ConstraintKinds
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        NumericUnderscores
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/monoidmap

library
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-groups
      , dependency-monoid-subclasses
      , dependency-monoidmap-internal
      , dependency-nothunks
      , extensions
    hs-source-dirs:
        components/monoidmap
    exposed-modules:
        Data.MonoidMap
    default-language:
        Haskell2010
