cabal-version:  3.0
name:           total-monoidal-maps
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/total-monoidal-maps/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2023 Jonathan Knowles
category:       Testing
synopsis:       Total monoidal maps
description:
    Total monoidal map types with support for semigroup and monoid subclasses.

extra-doc-files:
    README.md

common extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns
    ghc-options:
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

source-repository head
    type: git
    location: https://github.com/jonathanknowles/total-monoidal-maps

library
    import:
        extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Data.Total.MonoidMap
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , total-monoidal-maps:internal

library examples
    import:
        extensions
    hs-source-dirs:
        src/examples
    exposed-modules:
        Data.Total.MonoidMap.Examples.NestedMonoidMap
        Data.Total.MonoidMap.Examples.RecoveredMap
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , deepseq
      , monoid-subclasses
      , total-monoidal-maps

library internal
    import:
        extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Data.Total.MonoidMap.Internal
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , deepseq
      , groups
      , monoid-subclasses

test-suite test
    import:
        extensions
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        SpecHook
        Data.Total.MonoidMapSpec
        Data.Total.MonoidMap.Examples.RecoveredMapSpec
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , base >=4.7 && <5
      , containers
      , groups
      , hspec >= 2.8.3
      , monoid-subclasses
      , pretty-show
      , QuickCheck
      , quickcheck-classes
      , quickcheck-groups
      , quickcheck-instances
      , quickcheck-monoid-subclasses
      , text
      , total-monoidal-maps
      , total-monoidal-maps:examples

benchmark benchmark
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    build-depends:
      , base >=4.7 && <5
      , containers
      , deepseq
      , tasty-bench
      , tasty-hunit
      , total-monoidal-maps
      , total-monoidal-maps:examples
