cabal-version:  3.0
name:           total-monoidal-maps
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/total-monoidal-maps/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2023 Jonathan Knowles
category:       Testing
synopsis:       Total monoidal maps
description:
    Total monoidal map types with support for semigroup and monoid subclasses.

extra-doc-files:
    README.md

common dependency-base
    build-depends:base
common dependency-containers
    build-depends:containers
common dependency-deepseq
    build-depends:deepseq
common dependency-groups
    build-depends:groups
common dependency-hspec
    build-depends:hspec
common dependency-monoid-subclasses
    build-depends:monoid-subclasses
common dependency-pretty-show
    build-depends:pretty-show
common dependency-QuickCheck
    build-depends:QuickCheck
common dependency-quickcheck-classes
    build-depends:quickcheck-classes
common dependency-quickcheck-instances
    build-depends:quickcheck-instances
common dependency-quickcheck-monoid-subclasses
    build-depends:quickcheck-monoid-subclasses
common dependency-tasty-bench
    build-depends:tasty-bench
common dependency-tasty-hunit
    build-depends:tasty-hunit
common dependency-text
    build-depends:text

common extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/total-monoidal-maps

library
    import:
      , dependency-base
      , extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Data.Total.MonoidMap
    default-language:
        Haskell2010
    build-depends:
      , total-monoidal-maps:internal

library examples
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-monoid-subclasses
      , extensions
    hs-source-dirs:
        src/examples
    exposed-modules:
        Data.Total.MonoidMap.Examples.NestedMonoidMap
        Data.Total.MonoidMap.Examples.RecoveredMap
    default-language:
        Haskell2010
    build-depends:
      , total-monoidal-maps

library internal
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-groups
      , dependency-monoid-subclasses
      , extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Data.Total.MonoidMap.Internal
    default-language:
        Haskell2010

test-suite test
    import:
      , dependency-base
      , dependency-containers
      , dependency-groups
      , dependency-hspec
      , dependency-monoid-subclasses
      , dependency-pretty-show
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-quickcheck-instances
      , dependency-quickcheck-monoid-subclasses
      , dependency-text
      , extensions
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        SpecHook
        Data.Total.MonoidMapSpec
        Data.Total.MonoidMap.Examples.RecoveredMapSpec
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , quickcheck-groups
      , total-monoidal-maps
      , total-monoidal-maps:examples

benchmark benchmark
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-tasty-bench
      , dependency-tasty-hunit
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    build-depends:
      , total-monoidal-maps
      , total-monoidal-maps:examples
