cabal-version:  3.0
name:           total-monoidal-maps
version:        0.0.0.0
bug-reports:    https://github.com/jonathanknowles/total-monoidal-maps/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2023 Jonathan Knowles
category:       Testing
synopsis:       Total monoidal maps
description:
    Total monoidal map types with support for semigroup and monoid subclasses.

extra-doc-files:
    README.md

common dependency-base
    build-depends:base                          >= 4.14.3.0   && < 4.19
common dependency-containers
    build-depends:containers                    >= 0.6.5.1    && < 0.7
common dependency-deepseq
    build-depends:deepseq                       >= 1.4.4.0    && < 1.5
common dependency-groups
    build-depends:groups                        >= 0.5.3      && < 0.6
common dependency-hspec
    build-depends:hspec                         >= 2.10.9     && < 2.11
common dependency-monoid-subclasses
    build-depends:monoid-subclasses             >= 1.2.3      && < 1.3
common dependency-nonempty-containers
    build-depends:nonempty-containers           >= 0.3.4.4    && < 0.4
common dependency-nothunks
    build-depends:nothunks                      >= 0.1.3      && < 0.2
common dependency-pretty-show
    build-depends:pretty-show                   >= 1.10       && < 1.11
common dependency-QuickCheck
    build-depends:QuickCheck                    >= 2.14.2     && < 2.15
common dependency-quickcheck-classes
    build-depends:quickcheck-classes            >= 0.6.5.0    && < 0.7
common dependency-quickcheck-groups
    build-depends:quickcheck-groups             >= 0.0.0.0    && < 0.1
common dependency-quickcheck-instances
    build-depends:quickcheck-instances          >= 0.3.28     && < 0.4
common dependency-quickcheck-monoid-subclasses
    build-depends:quickcheck-monoid-subclasses  >= 0.3.0.0    && < 0.4
common dependency-tasty-bench
    build-depends:tasty-bench                   >= 0.3.2      && < 0.4
common dependency-tasty-hunit
    build-depends:tasty-hunit                   >= 0.10.0.3   && < 0.11
common dependency-text
    build-depends:text                          >= 1.2.4.1    && < 2.1

common extensions
    default-extensions:
        BangPatterns
        ConstraintKinds
        DerivingStrategies
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/total-monoidal-maps

library
    import:
      , dependency-base
      , dependency-containers
      , dependency-monoid-subclasses
      , extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Data.Total.MonoidMap
        Data.Total.MonoidMap.Unsafe
    default-language:
        Haskell2010
    build-depends:
      , internal

library examples
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-monoid-subclasses
      , dependency-nonempty-containers
      , extensions
    hs-source-dirs:
        src/examples
    exposed-modules:
        Examples.MultiMap.Class
        Examples.MultiMap.Instances.MultiMap1
        Examples.MultiMap.Instances.MultiMap2
        Examples.MultiMap.Instances.MultiMap3
        Examples.MultiMap.Instances.MultiMap4
        Examples.MultiSet
        Examples.NestedMonoidMap
        Examples.RecoveredMap
    default-language:
        Haskell2010
    build-depends:
      , total-monoidal-maps

library internal
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-groups
      , dependency-monoid-subclasses
      , dependency-nothunks
      , extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Data.Total.MonoidMap.Internal
    default-language:
        Haskell2010

test-suite test
    import:
      , dependency-base
      , dependency-containers
      , dependency-groups
      , dependency-hspec
      , dependency-monoid-subclasses
      , dependency-pretty-show
      , dependency-QuickCheck
      , dependency-quickcheck-classes
      , dependency-quickcheck-groups
      , dependency-quickcheck-instances
      , dependency-quickcheck-monoid-subclasses
      , dependency-text
      , extensions
    ghc-options:
        -threaded -with-rtsopts=-N
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        SpecHook
        Data.Total.MonoidMap.ClassSpec
        Data.Total.MonoidMap.ExampleSpec
        Data.Total.MonoidMap.TypeSpec
        Data.Total.MonoidMap.TypeSpec.FilterSpec
        Data.Total.MonoidMap.TypeSpec.PartitionSpec
        Data.Total.MonoidMap.TypeSpec.SliceSpec
        Data.Total.MonoidMap.TypeSpec.MapSpec
        Data.Total.MonoidMap.TypeSpec.PrefixSpec
        Data.Total.MonoidMap.TypeSpec.SuffixSpec
        Examples.MultiMapSpec
        Examples.RecoveredMapSpec
        Test.Common
        Test.QuickCheck.Classes.Hspec
        Test.Hspec.Unit
    type:
        exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , examples
      , total-monoidal-maps

benchmark benchmark
    import:
      , dependency-base
      , dependency-containers
      , dependency-deepseq
      , dependency-tasty-bench
      , dependency-tasty-hunit
    default-language:
        Haskell2010
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        src/benchmark
    main-is:
        Main.hs
    build-depends:
      , examples
      , total-monoidal-maps
